assets/css/style.css
/* ... */
#memory-match-game button {
   /* font-family*/
   border-radius: 5px;
   border: none;
   padding: 0.5rem;
   font-size: 1rem;
   letter-spacing: 1px;
   cursor: pointer;
   margin-bottom: 30px;
}

#memory-match-game ul {
   display: grid;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: repeat(4, 100px);
   gap: 10px;
   padding: 0;
}

#memory-match-game li {
   list-style-type: none;
   border: 0.5px solid rgb(2, 0, 36);
   border-radius: 10px;
   cursor: pointer;
}

/* media queries */

/* For larger to medium screens size from 1200px wide and down */
@media screen and (max-width: 1200px) {
   #company-ethos {
      width: 65%;
      height: 1200px;
      margin: 0 auto;
   }
   
   #quick-contact {
      float: right;
      height: 140px;
      font-size: 90%;
      position: absolute;
      top: 100px;
      right: 15px;
      color: #454545;
   }

   #hero-outer {
      height: 800px;
      width: 80vw;
      margin-right: 10vw;
      margin-left: 10vw;
      overflow: hidden;
      position: relative;
      margin-top: -190px;
      background: url('../images/gold-smear-diagonal.png') no-repeat center center;
      background-size: contain;
      object-position: center;
      object-fit: fill;
      object-position: center;
    }

   #cover-text {
      width: 290px;
      height: 170px;
      padding-top: 10px;
      padding-left: 10px;
      background-color: rgba(241, 109, 107, .7);
      border-radius: 1px;
      top: 230px;
      right: 0;
      position: absolute;
   }

   #welcome {
      padding: 30px 0;
      margin: 0;
   }   

   #left-about, #right-about {
      width: 100%;
      float: left;
      padding: 0;
   }   

   #center-about {
      clear: both;
      width: 100%;
      float: left;
      padding: 0;
   }

   #course-quick-links > div {
      width: 100%;
      clear: both;
      height: 150px;
      padding: 0;
   }

   hr {
      display: none;
   }

   .menu-box {
      width: 170px;
      margin-left: -70px;
      margin-top: -40px;
      position: relative;
      padding: 20px;
      align-items: center;
      background-color: #f2f2f2;
      transition: all 1s ease;
      
    }
    
    .menu-box li {
       list-style-type: none;
       margin: 30px;
       direction: rtl;
       display: inline;
       bottom: 0;
    }
    
    .menu-box a {
       text-decoration: none;
       font-family: 'Changa', sans-serif;
       letter-spacing: 2px;
       font-size: 150%;
       color: inherit;
    }
    
    .menu-box a:hover {
       border-bottom: 1px solid #3a3a3a;
       filter: drop-shadow(0 0 5px rgb(188, 157, 48, 0.9));
    }
    
    .line-container {
      opacity: 1;
      margin: 50px;
      width: 40px;
      height: 30px;
      cursor: pointer;
  }
  
  .line {
      opacity: 1;
      width: 100%;
      height: 2px;
      background-color: #454545;
      margin: 14px;
      border-radius: 10px;
      transition: transform 1s ease, opacity 0.5s ease;
      transform-origin: left;
  }
  
  .menu-box.active {
      transform: translateX(170px);
  }
  
  .line-container.active .line-1 {
      transform: rotate(45deg);
  }
  
  .line-container.active .line-2 {
      opacity: 0;
  }
  
  .line-container.active .line-3 {
      transform: rotate(-45deg);
  }
}

/* for medium screen sizes from 950px wide and down */
@media screen and (max-width: 950px) {
   #logo-words h1 {
      font-size: 2.2rem;
      margin-bottom: 10px;
   }
   
   #cover-text {
      font-size: 92%;
      width: 250px;
      height: 170px;
   }

   #company-ethos {
      width: 90%;
      height: 1200px;
      margin: 0 auto;
   }

   .left-about-heading, .right-about-heading {
      width: inherit;
   }

   .left-about-heading h2, .right-about-heading h2 {
      width: 100%;
      text-align: center;
   }

   .left-about-heading p, .right-about-heading p {
      width: 100%;
      text-align: center;
      padding: 20px;
   }
}

/* for medium screen sizes from 700px wide and down */
@media screen and (max-width: 700px) {
   #logo-words h1 {
      font-size: 1.5rem;
      margin-bottom: 10px;
   }
   
   #cover-text {
      font-size: 100%;
      width: 95vw;
      height: 120px;
      top: 120px;
      padding-left: 5px;
      padding-right: 5px;
      overflow: wrap;
      left: 0;
   }

   #circle-container {
      opacity: 0;
    }
   
    #circle-cover-bg {
      opacity: 0;
   }
}

